# bpc_prp_computer_vision

./: .gitignore  CMakeLists.txt  README.md
libs/bpc_prp_opnecv_lib/: CMakeLists.txt
libs/bpc_prp_opnecv_lib/include/bpc_prp_opencv_lib/: Detection.h  ImageProcessor.h  utils.h
libs/bpc_prp_opnecv_lib/src/: ImageProcessor.cpp
src/: main.cpp
